client/src/index.css
:root {
  font-family: 'Playfair Display', serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #d5abab;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;

  --graph-blue: #7F95D1;
  --graph-blue-hover: #8faaf5;
  --reed-red: #A70E16;
  --reed-red-hover: #ca545a;
  --graph-tan: #EDCB96;
  --light-background: #EFE6DD;
  --shadow: rgb(77, 66, 66);
  --text-hover: rgb(239, 199, 199);
  --home-button-hover: #fdd99f;
}

a {
  font-weight: 500;
  color: black;
  text-decoration: inherit;
}

a:hover {
  color: #535bf2;
}

.website-title {
  font-family: 'Lora', serif;
  font-weight: 500;
}

.red-sidebar-link {
  font-weight: 500;
  text-decoration: none;
  background-color: var(--reed-red);
  color: white;
  padding: 5px;
  border-radius: 10px;
  border: 2px solid black;
  text-align: center;
}

.red-sidebar-link:hover {
  color: white;
  background-color: var(--reed-red-hover);
}

.blue-sidebar-link {
  font-weight: 500;
  text-decoration: none;
  background-color: var(--graph-blue);
  color: white;
  padding: 5px;
  border-radius: 10px;
  border: 2px solid black;
  text-align: center;
}

.blue-sidebar-link:hover {
  color: white;
  background-color: var(--graph-blue-hover);
}

.tan-sidebar-link {
  font-weight: 500;
  text-decoration: none;
  background-color: var(--graph-tan);
  color: black;
  padding: 5px;
  border-radius: 10px;
  border: 2px solid black;
  text-align: center;
}

body {
  margin: 0px;
  padding: 0px;
  border: 0px;
  min-width: 320px;
  min-height: 100vh;
  color: white;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

h2 {
  text-align: center;
}

button {
  border-radius: 8px;
  border: 2px solid white;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}

button:hover {
  border-color: lightblue;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.navbar>ul {
  list-style-type: none;
}

.navbar>ul>* {
  margin-left: 10px;
  color: black;
}

.navbar {
  display: flex;
  align-items: center;
  padding-left: 25px;
  padding-right: 25px;
  border-bottom: solid;
  background: #A70E16;
}

.navbar-menu {
  display: flex;
  margin-left: auto;
}

.navbar-menu-button {
  padding: 6px 3px 3px 3px;
  background-color: #EDCB96;
  border-color: #000;
  border-radius: 4px;
  color: black;
  align-items: center;
}

.main-layout-body {
  align-items: center;
}

body {
  font: 16px Arial, Verdana, Tahoma, Sans-serif;
}

.page-container {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.content-wrap {
  flex: 1;
}

.container {
  width: 1048px;
  height: 275px;
  background: var(--reed-red);
  margin: auto;
  padding-left: 16px;
  padding-right: 16px;
  padding-bottom: 16px;
  margin-top: 50px;
  border-radius: 10px 10px 0 0;
  box-shadow: 0px -0px 10px 5px var(--shadow);
}

.query-title {
  border-bottom: 3px solid white;
  padding-bottom: 5px;
}

.wrapper {
  margin: 8px 0;
  height: 105px;
}

.wrapper h2 {
  text-align: left;
}

.search-container {
  display: inline-block;
  position: flex-start;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  align-content: stretch;
  align-items: center;
  margin-right: 10px;
  overflow: hidden;
  width: 100%;
}

.example {
  font-size: 15px;
  text-align: center;
  color: white;
}

.example>a {
  color: white;
  text-decoration: underline;
  cursor: pointer;
}

input {
  position: relative;
  min-width: 20px;
  min-height: 30px;
  padding: 8px;
  margin: 0;
  border: none;
  border-radius: 5px;
  height: 30px;
  width: 300px;
  order: 0;
  align-self: auto;
}

select {
  border: none;
  position: relative;
  min-width: 20px;
  min-height: 30px;
  padding: 8px;
  margin: 0;
  border-radius: 5px;
  height: 30px;
  width: 140px;
  order: 0;
  align-self: auto;
}

.search-button {
  padding: 8px 16px;
  min-height: 49px;
  min-width: 96px;
  word-wrap: nowrap;
  background: #000;
  color: #fff;
  border: 1px solid black;
  border-radius: 5px;
  order: 4;
  flex: 0 1 auto;
  align-self: auto;
  height: 30px;
  text-align: center;
}

.new-source {
  padding: 8px 16px;
  min-height: 50px;
  min-width: 96px;
  word-wrap: nowrap;
  background: #000;
  color: #fff;
  border: 2px solid var(--light-background);
  border-radius: 5px;
  order: 4;
  flex: 0 1 auto;
  align-self: auto;
  height: 30px;
  text-align: center;
}

.new-go-term-button {
  padding: 8px 16px;
  min-height: 50px;
  min-width: 96px;
  margin-top: 5px;
  word-wrap: nowrap;
  background: #000;
  color: #fff;
  border: 2px solid var(--light-background);
  border-radius: 5px;
  order: 4;
  flex: 0 1 auto;
  align-self: auto;
  height: 30px;
  text-align: center;
}

.search {
  flex: 2 1 auto;
}

.date-from {
  flex: 1 1 auto;
}

.date-to {
  flex: 1 1 auto;
}

.cytoscape-graph {
  border: 2px solid var(--light-background);
  border-radius: 0;
  background-color: var(--light-background);
  height: 480px;
  width: 800px;
  margin-right: 2px;
  margin-top: 5px;
  box-shadow: -5px 0px 15px 0px var(--shadow);
}

.search-box-align {
  display: flex;
  justify-content: center;
  flex-direction: column;
  flex-wrap: wrap;
}

.sidebar-align {
  display: flex;
  justify-content: center;
  width: 1080px;
  align-self: center;
}

.sidebar {
  width: 250px;
  height: 480px;
  background-color: var(--light-background);
  border: 2px solid var(--light-background);
  border-radius: 0;
  padding: 10px;
  margin-left: 2px;
  margin-top: 5px;
  overflow-y: scroll;
  box-shadow: 0px -0px 10px 5px var(--shadow);

}

.sidebar>h2,
h3,
p {
  color: black;
  word-wrap: break-word;
}

.export {
  color: black;
  text-decoration: underline;
  cursor: pointer;
  font-size: 0.8em;
}

.export:hover {
  color: var(--reed-red);
}
/* ... */

